tests/errors/surf_type_04.ki
# type/operator: complex numbers are unordered, '<' is rejected
var complex = import("complex")
var c = complex.of(1, 2)
discard c < c
